# Vlsir

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Taskfile.yml  mkdocs.yml  readme.md
.github/workflows/: python.yaml  tests.yaml
SpiceCmp/: .gitignore  readme.md  setup.py
SpiceCmp/spicecmp/: __init__.py  benches.py  compare_me.py  compare_meas.py  corner.py  errormode.py  mos.py  pdk.py  pdk_sim_combo.py  simulator.py  testcase.py
SpiceCmp/tests/: test_spicecmp.py
VlsirDev/: pyproject.toml  readme.md
VlsirDev/vlsirdev/: __init__.py
VlsirTools/: .gitignore  conftest.py  readme.md  setup.py
VlsirTools/tests/: test_netlist.py  test_primitives.py  test_vlsirtools.py
VlsirTools/vlsirtools/: __init__.py  primitives.py  pytest.py  sim_data.py  spectre.py  spice.py  spicetype.py  xyce.py
VlsirTools/vlsirtools/cli/: __main__.py
VlsirTools/vlsirtools/mosdb/: mos_char.py  run.py
VlsirTools/vlsirtools/netlist/: __init__.py  base.py  fmt.py  main.py  spectre.py  spectre_spice_shared.py  spice.py  verilog.py
VlsirTools/vlsirtools/spectre/: __init__.py
VlsirTools/vlsirtools/spice/: __init__.py  base.py  ngspice.py  sim_data.py  spectre.py  spice.py  xyce.py
VlsirTools/vlsirtools/xyce/: __init__.py
bindings/: readme.md
bindings/cpp/: readme.md
bindings/cpp/vlsir/: circuit.pb.cc  circuit.pb.h  geometry.pb.cc  geometry.pb.h  raw.pb.cc  raw.pb.h  spice.pb.cc  spice.pb.h  tech.pb.cc  tech.pb.h  tetris.pb.cc  tetris.pb.h  utils.pb.cc  utils.pb.h
bindings/js/: readme.md
bindings/js/vlsir/: abstract.js  abstractport.js  acinput.js  acresult.js  analysis.js  analysis_monteinput_sweepinput.js  analysisresult.js  analysisresult_monteresult_sweepresult.js  assign.js  authormetadata.js  cell.js  circuit.js  complexnum.js  concat.js  concat_connection.js  concat_connectiontarget.js  connection.js  connectiontarget.js  control.js  customanalysisinput.js  customanalysisresult.js  dcinput.js  dcresult.js  externalmodule.js  geometry.js  include.js  instance.js  interface.js  layer.js  layeredshapes.js  layerenum.js  layerinfo.js  layerpurpose.js  layerpurposetype.js  layershapes.js  layout.js  libinclude.js  library.js  librarymetadata.js  linearsweep.js  (+67 more)
bindings/julia/: Project.toml  README.md  Spice21xVLSIR.code-workspace  build.jl  build.sh  readme.md
bindings/julia/src/: Vlsir.jl
bindings/python/: pyproject.toml  readme.md  setup.py
bindings/rust/: .gitignore  Cargo.toml  build.rs  readme.md
bindings/rust/src/: lib.rs  spice.rs  tech.rs  utils.rs
bindings/ts/: .gitignore  package.json  readme.md  tsconfig.json
docs/reference/: protos.md
primitives/: readme.md  vlsir.primitives.pb.txt
protos/: LICENSE  README.md  circuit.proto  layout.proto  library.proto  netlist.proto  spice.proto  tech.proto  utils.proto
protos/layout/: raw.proto  tetris.proto
scripts/: build.sh  build_all_recipes.sh  build_cpp.sh  build_js.sh  build_julia.sh  build_python.sh  build_rust.sh  build_supported.sh  build_ts.sh  manage.py  primitives.py  publish.py  publish.sh  write_primitives.py
util/: proto2spice.py
(+54 files in other folders)
