[package]
name = "vlsir"
description = "Rust Bindings to the VLSIR Chip-Design Data Schemas"
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/dan-fritchman/Vlsir"
version = "1.0.0.dev0"


[dependencies]
prost = "0.8.0"
prost-types = "0.6.1"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.88"

[build-dependencies]
prost-build = "0.6.1"
serde_derive = "1.0.88"
