[package]
name = "vlsir"
description = "Rust Bindings to the VLSIR Chip-Design Data Schemas"
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/Vlsir/Vlsir"

# _VLSIR_VERSION 
# FIXME: Rust/ Cargo/ crates.io have a different pre/dev release format from some other package managers. 
# Particularly there is no "dev" distinction, only "pre"-releases e.g. "3.0.0-pre.3". 
# And the "pre" comes with a dash instead of a dot. 
version = "4.0.0-pre.0" 

[dependencies]
prost = "0.8.0"
prost-types = "0.6.1"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.88"

[build-dependencies]
prost-build = "0.6.1"
serde_derive = "1.0.88"
